--- a/Building.html
+++ b/Building.html
@@ -4,18 +4,18 @@
 <meta charset="utf-8"/>
 <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Temporary</title>
+<title>Building</title>
 <style id="applicationStylesheet" type="text/css">
 	.mediaViewInfo {
-		--web-view-name: Temporary;
-		--web-view-id: Temporary;
+		--web-view-name: Building;
+		--web-view-id: Building;
 		--web-scale-on-resize: true;
 		--web-center-horizontally: true;
 		--web-center-vertically: true;
 		--web-enable-deep-linking: true;
 	}
 	:root {
-		--web-view-ids: Temporary;
+		--web-view-ids: Building;
 	}
 	* {
 		margin: 0;
@@ -23,14 +23,14 @@
 		box-sizing: border-box;
 		border: none;
 	}
-	#Temporary {
+	#Building {
 		position: absolute;
 		width: 1434px;
-		height: 859px;
+		height: 2000px;
 		background-color: rgba(0,0,0,1);
 		overflow: hidden;
-		--web-view-name: Temporary;
-		--web-view-id: Temporary;
+		--web-view-name: Building;
+		--web-view-id: Building;
 		--web-scale-on-resize: true;
 		--web-center-horizontally: true;
 		--web-center-vertically: true;
@@ -46,58 +46,16 @@
 		}
 	
 	}
-	#SORRY_THIS_PAGE_IS_TEMPORARY_U {
-		left: 344px;
-		top: 122px;
-		position: absolute;
-		overflow: visible;
-		width: 748px;
-		white-space: nowrap;
-		text-align: left;
-		font-family: Arial;
-		font-style: normal;
-		font-weight: normal;
-		font-size: 27px;
-		color: rgba(205,205,205,1);
-	}
-	#ID404 {
-		left: 467px;
-		top: 375px;
-		position: absolute;
-		overflow: visible;
-		width: 502px;
-		white-space: nowrap;
-		text-align: left;
-		font-family: Arial;
-		font-style: normal;
-		font-weight: normal;
-		font-size: 300px;
-		color: rgba(205,205,205,1);
-	}
-	#PAGE_NOT_FOUND {
-		left: 586px;
-		top: 303px;
-		position: absolute;
-		overflow: visible;
-		width: 264px;
-		white-space: nowrap;
-		text-align: left;
-		font-family: Arial;
-		font-style: normal;
-		font-weight: normal;
-		font-size: 27px;
-		color: rgba(205,205,205,1);
-	}
 	#-_Back {
 		left: 1265.748px;
-		top: 782.505px;
+		top: 1923.505px;
 		position: absolute;
 		overflow: visible;
 		width: 116px;
 		height: 44px;
 		--web-animation: fadein 0.3s ease-out;
 		--web-action-type: page;
-		--web-action-target: Menu.html;
+		--web-action-target: Gallery.html;
 		cursor: pointer;
 		text-align: left;
 		font-family: Arial;
@@ -105,6 +63,76 @@
 		font-weight: bold;
 		font-size: 22px;
 		color: rgba(43,185,226,1);
+	}
+	#Building_r {
+		left: 56px;
+		top: 46px;
+		position: absolute;
+		overflow: visible;
+		width: 135px;
+		white-space: nowrap;
+		text-align: left;
+		font-family: Segoe UI;
+		font-style: normal;
+		font-weight: normal;
+		font-size: 37px;
+		color: rgba(255,255,255,1);
+	}
+	#ID20170606_103606 {
+		position: absolute;
+		width: 515px;
+		height: 290px;
+		left: 56px;
+		top: 145px;
+		overflow: visible;
+	}
+	#ID20170606_103610 {
+		position: absolute;
+		width: 515px;
+		height: 290px;
+		left: 657px;
+		top: 145px;
+		overflow: visible;
+	}
+	#ID20170309_094246 {
+		position: absolute;
+		width: 515px;
+		height: 289px;
+		left: 56px;
+		top: 502px;
+		overflow: visible;
+	}
+	#ID20170531_084233 {
+		position: absolute;
+		width: 514px;
+		height: 289px;
+		left: 658px;
+		top: 502px;
+		overflow: visible;
+	}
+	#IMG_1396 {
+		position: absolute;
+		width: 515px;
+		height: 386px;
+		left: 56px;
+		top: 858px;
+		overflow: visible;
+	}
+	#IMG_20170529_191122 {
+		position: absolute;
+		width: 513px;
+		height: 386px;
+		left: 658px;
+		top: 858px;
+		overflow: visible;
+	}
+	#IMG_1351 {
+		position: absolute;
+		width: 525px;
+		height: 394px;
+		left: 46px;
+		top: 1311px;
+		overflow: visible;
 	}
 </style>
 <script id="applicationScript">
@@ -2936,19 +2964,20 @@ window.application = new Application();
 </script>
 </head>
 <body>
-<div id="Temporary">
-	<div id="SORRY_THIS_PAGE_IS_TEMPORARY_U">
-		<span>SORRY THIS PAGE IS TEMPORARY UNAVAILABLE<br/>YOU PROBABLY KNOW ABOUT THIS ERROR BUT IT'S <br/>FUNNY TO MAKE THIS PAGE BECAUSE I'M NOT THE ONE <br/>SWEARING :)</span>
-	</div>
-	<div id="ID404">
-		<span>404</span>
-	</div>
-	<div id="PAGE_NOT_FOUND">
-		<span>PAGE NOT FOUND...</span>
-	</div>
+<div id="Building">
 	<div onclick="application.goToTargetView(event)" id="-_Back">
 		<span><- Back</span>
 	</div>
+	<div id="Building_r">
+		<span>Building</span>
+	</div>
+	<img id="ID20170606_103606" src="ID20170606_103606.png" srcset="ID20170606_103606.png 1x, ID20170606_103606@2x.png 2x">
+	<img id="ID20170606_103610" src="ID20170606_103610.png" srcset="ID20170606_103610.png 1x, ID20170606_103610@2x.png 2x">
+	<img id="ID20170309_094246" src="ID20170309_094246.png" srcset="ID20170309_094246.png 1x, ID20170309_094246@2x.png 2x">
+	<img id="ID20170531_084233" src="ID20170531_084233.png" srcset="ID20170531_084233.png 1x, ID20170531_084233@2x.png 2x">
+	<img id="IMG_1396" src="IMG_1396.png" srcset="IMG_1396.png 1x, IMG_1396@2x.png 2x">
+	<img id="IMG_20170529_191122" src="IMG_20170529_191122.png" srcset="IMG_20170529_191122.png 1x, IMG_20170529_191122@2x.png 2x">
+	<img id="IMG_1351" src="IMG_1351.png" srcset="IMG_1351.png 1x, IMG_1351@2x.png 2x">
 </div>
 </body>
 </html>
