--- a/Gallery.html
+++ b/Gallery.html
@@ -4,18 +4,18 @@
 <meta charset="utf-8"/>
 <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Temporary</title>
+<title>Gallery</title>
 <style id="applicationStylesheet" type="text/css">
 	.mediaViewInfo {
-		--web-view-name: Temporary;
-		--web-view-id: Temporary;
+		--web-view-name: Gallery;
+		--web-view-id: Gallery;
 		--web-scale-on-resize: true;
 		--web-center-horizontally: true;
 		--web-center-vertically: true;
 		--web-enable-deep-linking: true;
 	}
 	:root {
-		--web-view-ids: Temporary;
+		--web-view-ids: Gallery;
 	}
 	* {
 		margin: 0;
@@ -23,14 +23,14 @@
 		box-sizing: border-box;
 		border: none;
 	}
-	#Temporary {
+	#Gallery {
 		position: absolute;
 		width: 1434px;
 		height: 859px;
 		background-color: rgba(0,0,0,1);
 		overflow: hidden;
-		--web-view-name: Temporary;
-		--web-view-id: Temporary;
+		--web-view-name: Gallery;
+		--web-view-id: Gallery;
 		--web-scale-on-resize: true;
 		--web-center-horizontally: true;
 		--web-center-vertically: true;
@@ -45,48 +45,6 @@
 			opacity: 1;
 		}
 	
-	}
-	#SORRY_THIS_PAGE_IS_TEMPORARY_U {
-		left: 344px;
-		top: 122px;
-		position: absolute;
-		overflow: visible;
-		width: 748px;
-		white-space: nowrap;
-		text-align: left;
-		font-family: Arial;
-		font-style: normal;
-		font-weight: normal;
-		font-size: 27px;
-		color: rgba(205,205,205,1);
-	}
-	#ID404 {
-		left: 467px;
-		top: 375px;
-		position: absolute;
-		overflow: visible;
-		width: 502px;
-		white-space: nowrap;
-		text-align: left;
-		font-family: Arial;
-		font-style: normal;
-		font-weight: normal;
-		font-size: 300px;
-		color: rgba(205,205,205,1);
-	}
-	#PAGE_NOT_FOUND {
-		left: 586px;
-		top: 303px;
-		position: absolute;
-		overflow: visible;
-		width: 264px;
-		white-space: nowrap;
-		text-align: left;
-		font-family: Arial;
-		font-style: normal;
-		font-weight: normal;
-		font-size: 27px;
-		color: rgba(205,205,205,1);
 	}
 	#-_Back {
 		left: 1265.748px;
@@ -105,6 +63,309 @@
 		font-weight: bold;
 		font-size: 22px;
 		color: rgba(43,185,226,1);
+	}
+	#Gallery_ {
+		left: 50px;
+		top: 29.5px;
+		position: absolute;
+		overflow: hidden;
+		width: 443px;
+		height: 44px;
+		text-align: left;
+		font-family: Arial;
+		font-style: normal;
+		font-weight: bold;
+		font-size: 40px;
+		color: rgba(205,205,205,1);
+		text-decoration: underline;
+	}
+	#Untitled_LI {
+		fill: rgba(67,66,66,1);
+	}
+	.Untitled_LI {
+		position: absolute;
+		overflow: visible;
+		width: 355px;
+		height: 200px;
+		left: 55px;
+		top: 139px;
+	}
+	#Untitled_LI_t {
+		fill: rgba(152,146,146,1);
+	}
+	.Untitled_LI_t {
+		position: absolute;
+		overflow: visible;
+		width: 355px;
+		height: 200px;
+		left: 68px;
+		top: 151px;
+	}
+	#ID2 {
+		position: absolute;
+		width: 355px;
+		height: 200px;
+		left: 82px;
+		top: 162px;
+		overflow: visible;
+		--web-animation: fadein 0.3s ease-out;
+		--web-action-type: page;
+		--web-action-target: Mountains.html;
+		cursor: pointer;
+	}
+	#Untitled_LI_v {
+		fill: rgba(196,215,219,1);
+	}
+	.Untitled_LI_v {
+		position: absolute;
+		overflow: visible;
+		width: 355px;
+		height: 200px;
+		left: 526px;
+		top: 139px;
+	}
+	#Untitled_LI_w {
+		fill: rgba(255,224,224,1);
+	}
+	.Untitled_LI_w {
+		position: absolute;
+		overflow: visible;
+		width: 355px;
+		height: 200px;
+		left: 539px;
+		top: 151px;
+	}
+	#FMNU9317 {
+		position: absolute;
+		width: 355px;
+		height: 200px;
+		left: 553px;
+		top: 162px;
+		overflow: visible;
+		--web-animation: fadein 0.3s ease-out;
+		--web-action-type: page;
+		--web-action-target: Programming.html;
+		cursor: pointer;
+	}
+	#Untitled_LI_y {
+		fill: rgba(193,198,112,1);
+	}
+	.Untitled_LI_y {
+		position: absolute;
+		overflow: visible;
+		width: 355px;
+		height: 200px;
+		left: 997px;
+		top: 140px;
+	}
+	#Untitled_LI_z {
+		fill: rgba(107,88,88,1);
+	}
+	.Untitled_LI_z {
+		position: absolute;
+		overflow: visible;
+		width: 355px;
+		height: 200px;
+		left: 1010px;
+		top: 152px;
+	}
+	#ID20170606_103606 {
+		position: absolute;
+		width: 355px;
+		height: 200px;
+		left: 1024px;
+		top: 163px;
+		overflow: visible;
+		--web-animation: fadein 0.3s ease-out;
+		--web-action-type: page;
+		--web-action-target: Building.html;
+		cursor: pointer;
+	}
+	#Untitled_LI_ {
+		fill: rgba(67,66,66,1);
+	}
+	.Untitled_LI_ {
+		position: absolute;
+		overflow: visible;
+		width: 355px;
+		height: 200px;
+		left: 68px;
+		top: 458px;
+	}
+	#Untitled_LI_ba {
+		fill: rgba(152,146,146,1);
+	}
+	.Untitled_LI_ba {
+		position: absolute;
+		overflow: visible;
+		width: 355px;
+		height: 200px;
+		left: 81px;
+		top: 470px;
+	}
+	#ID7228a8d43f1731d222cb4b7571dc {
+		position: absolute;
+		width: 355px;
+		height: 200px;
+		left: 95px;
+		top: 481px;
+		overflow: visible;
+		--web-animation: fadein 0.3s ease-out;
+		--web-action-type: page;
+		--web-action-target: Temporary___1.html;
+		cursor: pointer;
+	}
+	#Untitled_LI_bb {
+		fill: rgba(196,215,219,1);
+	}
+	.Untitled_LI_bb {
+		position: absolute;
+		overflow: visible;
+		width: 355px;
+		height: 200px;
+		left: 539px;
+		top: 458px;
+	}
+	#Untitled_LI_bc {
+		fill: rgba(255,224,224,1);
+	}
+	.Untitled_LI_bc {
+		position: absolute;
+		overflow: visible;
+		width: 355px;
+		height: 200px;
+		left: 552px;
+		top: 470px;
+	}
+	#photo_2020-05-06_18-42-25png {
+		position: absolute;
+		width: 355px;
+		height: 200px;
+		left: 566px;
+		top: 481px;
+		overflow: visible;
+		--web-animation: fadein 0.3s ease-out;
+		--web-action-type: page;
+		--web-action-target: Temporary___1.html;
+		cursor: pointer;
+	}
+	#Untitled_LI_bd {
+		fill: rgba(193,198,112,1);
+	}
+	.Untitled_LI_bd {
+		position: absolute;
+		overflow: visible;
+		width: 355px;
+		height: 200px;
+		left: 1010px;
+		top: 458px;
+	}
+	#Untitled_LI_be {
+		fill: rgba(107,88,88,1);
+	}
+	.Untitled_LI_be {
+		position: absolute;
+		overflow: visible;
+		width: 355px;
+		height: 200px;
+		left: 1023px;
+		top: 470px;
+	}
+	#KXNB2112 {
+		position: absolute;
+		width: 355px;
+		height: 200px;
+		left: 1037px;
+		top: 481px;
+		overflow: visible;
+		--web-animation: fadein 0.3s ease-out;
+		--web-action-type: page;
+		--web-action-target: Temporary___1.html;
+		cursor: pointer;
+	}
+	#Mountains {
+		left: 196px;
+		top: 374px;
+		position: absolute;
+		overflow: visible;
+		width: 128px;
+		white-space: nowrap;
+		text-align: left;
+		font-family: Segoe UI;
+		font-style: normal;
+		font-weight: normal;
+		font-size: 27px;
+		color: rgba(255,255,255,1);
+	}
+	#Programming {
+		left: 649px;
+		top: 374px;
+		position: absolute;
+		overflow: visible;
+		width: 165px;
+		white-space: nowrap;
+		text-align: left;
+		font-family: Segoe UI;
+		font-style: normal;
+		font-weight: normal;
+		font-size: 27px;
+		color: rgba(255,255,255,1);
+	}
+	#Building {
+		left: 1153px;
+		top: 374px;
+		position: absolute;
+		overflow: visible;
+		width: 98px;
+		white-space: nowrap;
+		text-align: left;
+		font-family: Segoe UI;
+		font-style: normal;
+		font-weight: normal;
+		font-size: 27px;
+		color: rgba(255,255,255,1);
+	}
+	#Linux {
+		left: 229px;
+		top: 709px;
+		position: absolute;
+		overflow: visible;
+		width: 63px;
+		white-space: nowrap;
+		text-align: left;
+		font-family: Segoe UI;
+		font-style: normal;
+		font-weight: normal;
+		font-size: 27px;
+		color: rgba(255,255,255,1);
+	}
+	#Watchfaces {
+		left: 676px;
+		top: 709px;
+		position: absolute;
+		overflow: visible;
+		width: 136px;
+		white-space: nowrap;
+		text-align: left;
+		font-family: Segoe UI;
+		font-style: normal;
+		font-weight: normal;
+		font-size: 27px;
+		color: rgba(255,255,255,1);
+	}
+	#Dismantle_and_fixing {
+		left: 1093px;
+		top: 709px;
+		position: absolute;
+		overflow: visible;
+		width: 245px;
+		white-space: nowrap;
+		text-align: left;
+		font-family: Segoe UI;
+		font-style: normal;
+		font-weight: normal;
+		font-size: 27px;
+		color: rgba(255,255,255,1);
 	}
 </style>
 <script id="applicationScript">
@@ -2936,18 +3197,84 @@ window.application = new Application();
 </script>
 </head>
 <body>
-<div id="Temporary">
-	<div id="SORRY_THIS_PAGE_IS_TEMPORARY_U">
-		<span>SORRY THIS PAGE IS TEMPORARY UNAVAILABLE<br/>YOU PROBABLY KNOW ABOUT THIS ERROR BUT IT'S <br/>FUNNY TO MAKE THIS PAGE BECAUSE I'M NOT THE ONE <br/>SWEARING :)</span>
-	</div>
-	<div id="ID404">
-		<span>404</span>
-	</div>
-	<div id="PAGE_NOT_FOUND">
-		<span>PAGE NOT FOUND...</span>
-	</div>
+<div id="Gallery">
 	<div onclick="application.goToTargetView(event)" id="-_Back">
 		<span><- Back</span>
+	</div>
+	<div id="Gallery_">
+		<span>Gallery:</span><br>
+	</div>
+	<svg class="Untitled_LI">
+		<rect id="Untitled_LI" rx="0" ry="0" x="0" y="0" width="355" height="200">
+		</rect>
+	</svg>
+	<svg class="Untitled_LI_t">
+		<rect id="Untitled_LI_t" rx="0" ry="0" x="0" y="0" width="355" height="200">
+		</rect>
+	</svg>
+	<img onclick="application.goToTargetView(event)" id="ID2" src="ID2.png" srcset="ID2.png 1x, ID2@2x.png 2x">
+	<svg class="Untitled_LI_v">
+		<rect id="Untitled_LI_v" rx="0" ry="0" x="0" y="0" width="355" height="200">
+		</rect>
+	</svg>
+	<svg class="Untitled_LI_w">
+		<rect id="Untitled_LI_w" rx="0" ry="0" x="0" y="0" width="355" height="200">
+		</rect>
+	</svg>
+	<img onclick="application.goToTargetView(event)" id="FMNU9317" src="FMNU9317.png" srcset="FMNU9317.png 1x, FMNU9317@2x.png 2x">
+	<svg class="Untitled_LI_y">
+		<rect id="Untitled_LI_y" rx="0" ry="0" x="0" y="0" width="355" height="200">
+		</rect>
+	</svg>
+	<svg class="Untitled_LI_z">
+		<rect id="Untitled_LI_z" rx="0" ry="0" x="0" y="0" width="355" height="200">
+		</rect>
+	</svg>
+	<img onclick="application.goToTargetView(event)" id="ID20170606_103606" src="ID20170606_103606.png" srcset="ID20170606_103606.png 1x, ID20170606_103606@2x.png 2x">
+	<svg class="Untitled_LI_">
+		<rect id="Untitled_LI_" rx="0" ry="0" x="0" y="0" width="355" height="200">
+		</rect>
+	</svg>
+	<svg class="Untitled_LI_ba">
+		<rect id="Untitled_LI_ba" rx="0" ry="0" x="0" y="0" width="355" height="200">
+		</rect>
+	</svg>
+	<img onclick="application.goToTargetView(event)" id="ID7228a8d43f1731d222cb4b7571dc" src="ID7228a8d43f1731d222cb4b7571dc.png" srcset="ID7228a8d43f1731d222cb4b7571dc.png 1x, ID7228a8d43f1731d222cb4b7571dc@2x.png 2x">
+	<svg class="Untitled_LI_bb">
+		<rect id="Untitled_LI_bb" rx="0" ry="0" x="0" y="0" width="355" height="200">
+		</rect>
+	</svg>
+	<svg class="Untitled_LI_bc">
+		<rect id="Untitled_LI_bc" rx="0" ry="0" x="0" y="0" width="355" height="200">
+		</rect>
+	</svg>
+	<img onclick="application.goToTargetView(event)" id="photo_2020-05-06_18-42-25png" src="photo_2020-05-06_18-42-25png.png" srcset="photo_2020-05-06_18-42-25png.png 1x, photo_2020-05-06_18-42-25png@2x.png 2x">
+	<svg class="Untitled_LI_bd">
+		<rect id="Untitled_LI_bd" rx="0" ry="0" x="0" y="0" width="355" height="200">
+		</rect>
+	</svg>
+	<svg class="Untitled_LI_be">
+		<rect id="Untitled_LI_be" rx="0" ry="0" x="0" y="0" width="355" height="200">
+		</rect>
+	</svg>
+	<img onclick="application.goToTargetView(event)" id="KXNB2112" src="KXNB2112.png" srcset="KXNB2112.png 1x, KXNB2112@2x.png 2x">
+	<div id="Mountains">
+		<span>Mountains</span>
+	</div>
+	<div id="Programming">
+		<span>Programming</span>
+	</div>
+	<div id="Building">
+		<span>Building</span>
+	</div>
+	<div id="Linux">
+		<span>Linux</span>
+	</div>
+	<div id="Watchfaces">
+		<span>Watchfaces</span>
+	</div>
+	<div id="Dismantle_and_fixing">
+		<span>Dismantle and fixing</span>
 	</div>
 </div>
 </body>
