--- a/Menu.html
+++ b/Menu.html
@@ -55,11 +55,7 @@
 		width: 456px;
 		height: 89px;
 		left: 489px;
-		top: 70px;
-		--web-animation: fadein 0.3s ease-out;
-		--web-action-type: page;
-		--web-action-target: HOME.html;
-		cursor: pointer;
+		top: 163px;
 	}
 	#Rettangolo_8 {
 		fill: rgba(0,0,0,1);
@@ -70,11 +66,7 @@
 		width: 456px;
 		height: 89px;
 		left: 489px;
-		top: 159px;
-		--web-animation: fadein 0.3s ease-out;
-		--web-action-type: page;
-		--web-action-target: About.html;
-		cursor: pointer;
+		top: 252px;
 	}
 	#Rettangolo_9 {
 		fill: rgba(0,0,0,1);
@@ -85,7 +77,7 @@
 		width: 456px;
 		height: 89px;
 		left: 489px;
-		top: 248px;
+		top: 341px;
 		--web-animation: fadein 0.3s ease-out;
 		--web-action-type: page;
 		--web-action-target: Temporary.html;
@@ -100,11 +92,7 @@
 		width: 456px;
 		height: 89px;
 		left: 489px;
-		top: 337px;
-		--web-animation: fadein 0.3s ease-out;
-		--web-action-type: page;
-		--web-action-target: Temporary.html;
-		cursor: pointer;
+		top: 430px;
 	}
 	#Rettangolo_11 {
 		fill: rgba(0,0,0,1);
@@ -115,11 +103,7 @@
 		width: 456px;
 		height: 89px;
 		left: 489px;
-		top: 426px;
-		--web-animation: fadein 0.3s ease-out;
-		--web-action-type: page;
-		--web-action-target: Temporary.html;
-		cursor: pointer;
+		top: 519px;
 	}
 	#Rettangolo_12 {
 		fill: rgba(0,0,0,1);
@@ -130,19 +114,19 @@
 		width: 456px;
 		height: 89px;
 		left: 489px;
-		top: 515px;
-		--web-animation: fadein 0.3s ease-out;
-		--web-action-type: page;
-		--web-action-target: Contacts.html;
-		cursor: pointer;
+		top: 608px;
 	}
 	#Home {
 		left: 671px;
-		top: 95px;
+		top: 188px;
 		position: absolute;
 		overflow: visible;
 		width: 94px;
 		white-space: nowrap;
+		--web-animation: fadein 0.3s ease-out;
+		--web-action-type: page;
+		--web-action-target: HOME.html;
+		cursor: pointer;
 		text-align: left;
 		font-family: Arial;
 		font-style: normal;
@@ -152,11 +136,15 @@
 	}
 	#About {
 		left: 672px;
-		top: 184px;
+		top: 277px;
 		position: absolute;
 		overflow: visible;
 		width: 92px;
 		white-space: nowrap;
+		--web-animation: fadein 0.3s ease-out;
+		--web-action-type: page;
+		--web-action-target: About.html;
+		cursor: pointer;
 		text-align: left;
 		font-family: Arial;
 		font-style: normal;
@@ -166,7 +154,7 @@
 	}
 	#Blog {
 		left: 682px;
-		top: 273px;
+		top: 366px;
 		position: absolute;
 		overflow: visible;
 		width: 71px;
@@ -180,7 +168,7 @@
 	}
 	#Gallery {
 		left: 662px;
-		top: 362px;
+		top: 455px;
 		position: absolute;
 		overflow: visible;
 		width: 112px;
@@ -194,11 +182,15 @@
 	}
 	#Programs {
 		left: 641px;
-		top: 451px;
+		top: 544px;
 		position: absolute;
 		overflow: visible;
 		width: 153px;
 		white-space: nowrap;
+		--web-animation: fadein 0.3s ease-out;
+		--web-action-type: page;
+		--web-action-target: Temporary.html;
+		cursor: pointer;
 		text-align: left;
 		font-family: Arial;
 		font-style: normal;
@@ -208,11 +200,15 @@
 	}
 	#Contacts {
 		left: 648px;
-		top: 540px;
+		top: 633px;
 		position: absolute;
 		overflow: visible;
 		width: 139px;
 		white-space: nowrap;
+		--web-animation: fadein 0.3s ease-out;
+		--web-action-type: page;
+		--web-action-target: Contacts.html;
+		cursor: pointer;
 		text-align: left;
 		font-family: Arial;
 		font-style: normal;
@@ -3052,11 +3048,11 @@ window.application = new Application();
 <body>
 <div id="Menu">
 	<svg class="Rettangolo_7">
-		<rect onclick="application.goToTargetView(event)" id="Rettangolo_7" rx="0" ry="0" x="0" y="0" width="456" height="89">
+		<rect id="Rettangolo_7" rx="0" ry="0" x="0" y="0" width="456" height="89">
 		</rect>
 	</svg>
 	<svg class="Rettangolo_8">
-		<rect onclick="application.goToTargetView(event)" id="Rettangolo_8" rx="0" ry="0" x="0" y="0" width="456" height="89">
+		<rect id="Rettangolo_8" rx="0" ry="0" x="0" y="0" width="456" height="89">
 		</rect>
 	</svg>
 	<svg class="Rettangolo_9">
@@ -3064,21 +3060,21 @@ window.application = new Application();
 		</rect>
 	</svg>
 	<svg class="Rettangolo_10">
-		<rect onclick="application.goToTargetView(event)" id="Rettangolo_10" rx="0" ry="0" x="0" y="0" width="456" height="89">
+		<rect id="Rettangolo_10" rx="0" ry="0" x="0" y="0" width="456" height="89">
 		</rect>
 	</svg>
 	<svg class="Rettangolo_11">
-		<rect onclick="application.goToTargetView(event)" id="Rettangolo_11" rx="0" ry="0" x="0" y="0" width="456" height="89">
+		<rect id="Rettangolo_11" rx="0" ry="0" x="0" y="0" width="456" height="89">
 		</rect>
 	</svg>
 	<svg class="Rettangolo_12">
-		<rect onclick="application.goToTargetView(event)" id="Rettangolo_12" rx="0" ry="0" x="0" y="0" width="456" height="89">
+		<rect id="Rettangolo_12" rx="0" ry="0" x="0" y="0" width="456" height="89">
 		</rect>
 	</svg>
-	<div id="Home">
+	<div onclick="application.goToTargetView(event)" id="Home">
 		<span>Home</span>
 	</div>
-	<div id="About">
+	<div onclick="application.goToTargetView(event)" id="About">
 		<span>About</span>
 	</div>
 	<div id="Blog">
@@ -3087,10 +3083,10 @@ window.application = new Application();
 	<div id="Gallery">
 		<span>Gallery</span>
 	</div>
-	<div id="Programs">
+	<div onclick="application.goToTargetView(event)" id="Programs">
 		<span>Programs</span>
 	</div>
-	<div id="Contacts">
+	<div onclick="application.goToTargetView(event)" id="Contacts">
 		<span>Contacts</span>
 	</div>
 </div>
