--- a/Temporary___1.html
+++ b/Temporary___1.html
@@ -4,18 +4,18 @@
 <meta charset="utf-8"/>
 <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Temporary</title>
+<title>Temporary – 1</title>
 <style id="applicationStylesheet" type="text/css">
 	.mediaViewInfo {
-		--web-view-name: Temporary;
-		--web-view-id: Temporary;
+		--web-view-name: Temporary – 1;
+		--web-view-id: Temporary__1;
 		--web-scale-on-resize: true;
 		--web-center-horizontally: true;
 		--web-center-vertically: true;
 		--web-enable-deep-linking: true;
 	}
 	:root {
-		--web-view-ids: Temporary;
+		--web-view-ids: Temporary__1;
 	}
 	* {
 		margin: 0;
@@ -23,14 +23,14 @@
 		box-sizing: border-box;
 		border: none;
 	}
-	#Temporary {
+	#Temporary__1 {
 		position: absolute;
 		width: 1434px;
 		height: 859px;
 		background-color: rgba(0,0,0,1);
 		overflow: hidden;
-		--web-view-name: Temporary;
-		--web-view-id: Temporary;
+		--web-view-name: Temporary – 1;
+		--web-view-id: Temporary__1;
 		--web-scale-on-resize: true;
 		--web-center-horizontally: true;
 		--web-center-vertically: true;
@@ -97,7 +97,7 @@
 		height: 44px;
 		--web-animation: fadein 0.3s ease-out;
 		--web-action-type: page;
-		--web-action-target: Menu.html;
+		--web-action-target: Gallery.html;
 		cursor: pointer;
 		text-align: left;
 		font-family: Arial;
@@ -2936,7 +2936,7 @@ window.application = new Application();
 </script>
 </head>
 <body>
-<div id="Temporary">
+<div id="Temporary__1">
 	<div id="SORRY_THIS_PAGE_IS_TEMPORARY_U">
 		<span>SORRY THIS PAGE IS TEMPORARY UNAVAILABLE<br/>YOU PROBABLY KNOW ABOUT THIS ERROR BUT IT'S <br/>FUNNY TO MAKE THIS PAGE BECAUSE I'M NOT THE ONE <br/>SWEARING :)</span>
 	</div>
