--- a/Mountains.html
+++ b/Mountains.html
@@ -4,18 +4,18 @@
 <meta charset="utf-8"/>
 <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Temporary</title>
+<title>Mountains</title>
 <style id="applicationStylesheet" type="text/css">
 	.mediaViewInfo {
-		--web-view-name: Temporary;
-		--web-view-id: Temporary;
+		--web-view-name: Mountains;
+		--web-view-id: Mountains;
 		--web-scale-on-resize: true;
 		--web-center-horizontally: true;
 		--web-center-vertically: true;
 		--web-enable-deep-linking: true;
 	}
 	:root {
-		--web-view-ids: Temporary;
+		--web-view-ids: Mountains;
 	}
 	* {
 		margin: 0;
@@ -23,14 +23,14 @@
 		box-sizing: border-box;
 		border: none;
 	}
-	#Temporary {
+	#Mountains {
 		position: absolute;
 		width: 1434px;
 		height: 859px;
 		background-color: rgba(0,0,0,1);
 		overflow: hidden;
-		--web-view-name: Temporary;
-		--web-view-id: Temporary;
+		--web-view-name: Mountains;
+		--web-view-id: Mountains;
 		--web-scale-on-resize: true;
 		--web-center-horizontally: true;
 		--web-center-vertically: true;
@@ -46,48 +46,6 @@
 		}
 	
 	}
-	#SORRY_THIS_PAGE_IS_TEMPORARY_U {
-		left: 344px;
-		top: 122px;
-		position: absolute;
-		overflow: visible;
-		width: 748px;
-		white-space: nowrap;
-		text-align: left;
-		font-family: Arial;
-		font-style: normal;
-		font-weight: normal;
-		font-size: 27px;
-		color: rgba(205,205,205,1);
-	}
-	#ID404 {
-		left: 467px;
-		top: 375px;
-		position: absolute;
-		overflow: visible;
-		width: 502px;
-		white-space: nowrap;
-		text-align: left;
-		font-family: Arial;
-		font-style: normal;
-		font-weight: normal;
-		font-size: 300px;
-		color: rgba(205,205,205,1);
-	}
-	#PAGE_NOT_FOUND {
-		left: 586px;
-		top: 303px;
-		position: absolute;
-		overflow: visible;
-		width: 264px;
-		white-space: nowrap;
-		text-align: left;
-		font-family: Arial;
-		font-style: normal;
-		font-weight: normal;
-		font-size: 27px;
-		color: rgba(205,205,205,1);
-	}
 	#-_Back {
 		left: 1265.748px;
 		top: 782.505px;
@@ -97,7 +55,7 @@
 		height: 44px;
 		--web-animation: fadein 0.3s ease-out;
 		--web-action-type: page;
-		--web-action-target: Menu.html;
+		--web-action-target: Gallery.html;
 		cursor: pointer;
 		text-align: left;
 		font-family: Arial;
@@ -105,6 +63,52 @@
 		font-weight: bold;
 		font-size: 22px;
 		color: rgba(43,185,226,1);
+	}
+	#ID2 {
+		position: absolute;
+		width: 428px;
+		height: 241px;
+		left: 56px;
+		top: 138px;
+		overflow: visible;
+	}
+	#ID3 {
+		position: absolute;
+		width: 428px;
+		height: 241px;
+		left: 544px;
+		top: 138px;
+		overflow: visible;
+	}
+	#Mountains_t {
+		left: 56px;
+		top: 46px;
+		position: absolute;
+		overflow: visible;
+		width: 175px;
+		white-space: nowrap;
+		text-align: left;
+		font-family: Segoe UI;
+		font-style: normal;
+		font-weight: normal;
+		font-size: 37px;
+		color: rgba(255,255,255,1);
+	}
+	#lago-di-baies-2 {
+		position: absolute;
+		width: 428px;
+		height: 272.5px;
+		left: 56px;
+		top: 422px;
+		overflow: visible;
+	}
+	#ID5aa5ed56ca724 {
+		position: absolute;
+		width: 485px;
+		height: 273px;
+		left: 544px;
+		top: 422px;
+		overflow: visible;
 	}
 </style>
 <script id="applicationScript">
@@ -2936,19 +2940,17 @@ window.application = new Application();
 </script>
 </head>
 <body>
-<div id="Temporary">
-	<div id="SORRY_THIS_PAGE_IS_TEMPORARY_U">
-		<span>SORRY THIS PAGE IS TEMPORARY UNAVAILABLE<br/>YOU PROBABLY KNOW ABOUT THIS ERROR BUT IT'S <br/>FUNNY TO MAKE THIS PAGE BECAUSE I'M NOT THE ONE <br/>SWEARING :)</span>
-	</div>
-	<div id="ID404">
-		<span>404</span>
-	</div>
-	<div id="PAGE_NOT_FOUND">
-		<span>PAGE NOT FOUND...</span>
-	</div>
+<div id="Mountains">
 	<div onclick="application.goToTargetView(event)" id="-_Back">
 		<span><- Back</span>
 	</div>
+	<img id="ID2" src="ID2.png" srcset="ID2.png 1x, ID2@2x.png 2x">
+	<img id="ID3" src="ID3.png" srcset="ID3.png 1x, ID3@2x.png 2x">
+	<div id="Mountains_t">
+		<span>Mountains</span>
+	</div>
+	<img id="lago-di-baies-2" src="lago-di-baies-2.png" srcset="lago-di-baies-2.png 1x, lago-di-baies-2@2x.png 2x">
+	<img id="ID5aa5ed56ca724" src="ID5aa5ed56ca724.png" srcset="ID5aa5ed56ca724.png 1x, ID5aa5ed56ca724@2x.png 2x">
 </div>
 </body>
 </html>
