--- a/html.html
+++ b/html.html
@@ -24,7 +24,7 @@
 <h2><hr/><p align="center"> Books </p><hr/>
 </h2><img src="https://raw.githubusercontent.com/Samuele98-git/Samuele98-git.github.io/master/31aX81I6vnL.jpg" width="100" height="142">
 <p>
-    While if you want to buy it(recommended) go => <a href="https://www.amazon.it/HTML-CSS-Javascript-Jquery-Duckett/dp/1118907442" target="_blank"><strong> here </strong>  but this guide is already based on the book</a>
+    While if you want to buy it(recommended) go => <a href="https://www.amazon.it/HTML-CSS-Javascript-Jquery-Duckett/dp/1118907442" target="_blank"><strong> here </strong> </a> but this guide is already based on the book</a>
     <br><br><a href="file:///C:/Users/sdibl/Desktop/newjadeTemplate.html"> <button  type="link"><p align="center"> Next page</button></p></a><br>
 </body>
 </html>
