--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
   
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <base href="https://sdiblasio0.com/website/">
-
-<title>HOME</title>
+<title>Samuele98-git HOMEPAGE</title>
 <style id="applicationStylesheet" type="text/css">
 	.mediaViewInfo {
 		--web-view-name: HOME;
